Apr 06, 2022
  tuned up logging

Feb 04, 2022
  updated log4j to avoid zero day exploit

Jan 06, 2021
  refactored code to the new variant table structure

Jun 24, 2020
   updated jar dependencies

May 10, 2020
   updated jar dependencies

2019-10-15
   merged duplicate code for dry-run and normal-run

2019-09-19
   replaced System.out.println statements with log4j logging

2019-09-04
   centralized DAO code

1.2.0 - 2019-04-17
   moved from ant to gradle

1.1.0 - 2018-09-25
   moved from subversion to github

TODO:
   -add cmdline parameter so you can run program for specified assembly (instead of running it for all assemblies)
   -add cmdline parameter so you can run program for specified chromosome (instead of running it for all chromosomes)