@@ -1,3 +1,6 @@
+May 24, 2022
+  renamed distro to 'protein-qc-pipeline'
+
 Apr 06, 2022
   tuned up logging
 
